# chat_work

./: .env.example  .gitignore  README.md  pyproject.toml  test_rich_text_reply.py  test_stream_card.py
app/: __init__.py  cli.py  config.py  main.py
app/api/: routes.py
app/services/: __init__.py  claude_service.py  executor.py
docs/: feishu-setup.md
web/static/: index.html
